[gd_scene load_steps=9 format=3 uid="uid://csjg1vyptxxc1"]

[ext_resource type="Script" uid="uid://4rtao4q1door" path="res://Scenes/Animal/animal.gd" id="1_eawv1"]
[ext_resource type="Texture2D" uid="uid://bwbny03c4jtko" path="res://Assets/player/parrot.png" id="1_ya4tb"]
[ext_resource type="Texture2D" uid="uid://b7hqj882x76c7" path="res://Assets/items/arrow.png" id="2_gh3hi"]
[ext_resource type="AudioStream" uid="uid://dmwpakggjhq0c" path="res://Assets/audio/stretch2.ogg" id="4_dv2k2"]
[ext_resource type="AudioStream" uid="uid://dmnagthbage6m" path="res://Assets/audio/catapult.ogg" id="5_45866"]
[ext_resource type="AudioStream" uid="uid://biwkd0oix61sk" path="res://Assets/audio/kick_wood.ogg" id="6_7djon"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_eawv1"]
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_gh3hi"]
radius = 19.0

[node name="Animal" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_eawv1")
freeze = true
contact_monitor = true
script = ExtResource("1_eawv1")

[node name="Body" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_ya4tb")

[node name="Arrow" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_gh3hi")
offset = Vector2(150, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gh3hi")

[node name="DebugLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -114.0
offset_right = 55.0
offset_bottom = -69.0
scale = Vector2(0.533993, 0.533993)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "label"

[node name="StretchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dv2k2")

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_45866")

[node name="KickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_7djon")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_sleeping_state_changed"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
